Uniformize code used to retrieve a dataset